[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/ui-components/match-statistics/MatchStats.gd" type="Script" id=1]

[node name="Stats" type="MarginContainer"]
visible = false
margin_left = 683.2
margin_top = 201.6
margin_right = 1737.2
margin_bottom = 857.6
rect_scale = Vector2( 0.9, 0.9 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="GridContainer" parent="."]
margin_right = 1054.0
margin_bottom = 656.0
columns = 3

[node name="HomePossession" type="Label" parent="VBoxContainer"]
margin_right = 317.0
margin_bottom = 56.0
size_flags_horizontal = 3
text = "45%"

[node name="Possession" type="Label" parent="VBoxContainer"]
margin_left = 321.0
margin_right = 732.0
margin_bottom = 56.0
size_flags_horizontal = 3
text = "POSSESSION"
align = 1

[node name="AwayPossession" type="Label" parent="VBoxContainer"]
margin_left = 736.0
margin_right = 1053.0
margin_bottom = 56.0
size_flags_horizontal = 3
text = "55%"
align = 2

[node name="HomeShots" type="Label" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 317.0
margin_bottom = 116.0
size_flags_horizontal = 3
text = "12"

[node name="Shots" type="Label" parent="VBoxContainer"]
margin_left = 321.0
margin_top = 60.0
margin_right = 732.0
margin_bottom = 116.0
size_flags_horizontal = 3
text = "SHOTS"
align = 1

[node name="AwayShots" type="Label" parent="VBoxContainer"]
margin_left = 736.0
margin_top = 60.0
margin_right = 1053.0
margin_bottom = 116.0
size_flags_horizontal = 3
text = "0"
align = 2

[node name="HomeShotsOnTarget" type="Label" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 317.0
margin_bottom = 176.0
size_flags_horizontal = 3
text = "0"

[node name="ShotsOnTarget" type="Label" parent="VBoxContainer"]
margin_left = 321.0
margin_top = 120.0
margin_right = 732.0
margin_bottom = 176.0
size_flags_horizontal = 3
text = "SHOTS_ON_TARGET"
align = 1

[node name="AwayShotsOnTarget" type="Label" parent="VBoxContainer"]
margin_left = 736.0
margin_top = 120.0
margin_right = 1053.0
margin_bottom = 176.0
size_flags_horizontal = 3
text = "0"
align = 2

[node name="HomeFouls" type="Label" parent="VBoxContainer"]
margin_top = 420.0
margin_right = 317.0
margin_bottom = 476.0
size_flags_horizontal = 3
text = "0"

[node name="Fouls" type="Label" parent="VBoxContainer"]
margin_left = 321.0
margin_top = 420.0
margin_right = 732.0
margin_bottom = 476.0
size_flags_horizontal = 3
text = "FOULS"
align = 1

[node name="AwayFouls" type="Label" parent="VBoxContainer"]
margin_left = 736.0
margin_top = 420.0
margin_right = 1053.0
margin_bottom = 476.0
size_flags_horizontal = 3
text = "0"
align = 2

[node name="HomeFreeKicks" type="Label" parent="VBoxContainer"]
margin_top = 240.0
margin_right = 317.0
margin_bottom = 296.0
size_flags_horizontal = 3
text = "0"

[node name="FreeKicks" type="Label" parent="VBoxContainer"]
margin_left = 321.0
margin_top = 240.0
margin_right = 732.0
margin_bottom = 296.0
size_flags_horizontal = 3
text = "FREE_KICKS"
align = 1

[node name="AwayFreeKicks" type="Label" parent="VBoxContainer"]
margin_left = 736.0
margin_top = 240.0
margin_right = 1053.0
margin_bottom = 296.0
size_flags_horizontal = 3
text = "0"
align = 2

[node name="HomePenalties" type="Label" parent="VBoxContainer"]
margin_top = 300.0
margin_right = 317.0
margin_bottom = 356.0
size_flags_horizontal = 3
text = "0"

[node name="Penalties" type="Label" parent="VBoxContainer"]
margin_left = 321.0
margin_top = 300.0
margin_right = 732.0
margin_bottom = 356.0
size_flags_horizontal = 3
text = "PENALTIES"
align = 1

[node name="AwayPenalties" type="Label" parent="VBoxContainer"]
margin_left = 736.0
margin_top = 300.0
margin_right = 1053.0
margin_bottom = 356.0
size_flags_horizontal = 3
text = "0"
align = 2

[node name="HomeThrowIn" type="Label" parent="VBoxContainer"]
margin_top = 360.0
margin_right = 317.0
margin_bottom = 416.0
size_flags_horizontal = 3
text = "0"

[node name="ThrowIn" type="Label" parent="VBoxContainer"]
margin_left = 321.0
margin_top = 360.0
margin_right = 732.0
margin_bottom = 416.0
size_flags_horizontal = 3
text = "THROW_INS"
align = 1

[node name="AwayThrowIn" type="Label" parent="VBoxContainer"]
margin_left = 736.0
margin_top = 360.0
margin_right = 1053.0
margin_bottom = 416.0
size_flags_horizontal = 3
text = "0"
align = 2

[node name="HomeCorners" type="Label" parent="VBoxContainer"]
margin_top = 180.0
margin_right = 317.0
margin_bottom = 236.0
size_flags_horizontal = 3
text = "0"

[node name="Corners" type="Label" parent="VBoxContainer"]
margin_left = 321.0
margin_top = 180.0
margin_right = 732.0
margin_bottom = 236.0
size_flags_horizontal = 3
text = "CORNERS"
align = 1

[node name="AwayCorners" type="Label" parent="VBoxContainer"]
margin_left = 736.0
margin_top = 180.0
margin_right = 1053.0
margin_bottom = 236.0
size_flags_horizontal = 3
text = "0"
align = 2

[node name="HomePass" type="Label" parent="VBoxContainer"]
margin_top = 480.0
margin_right = 317.0
margin_bottom = 536.0
size_flags_horizontal = 3
text = "0"

[node name="Pass" type="Label" parent="VBoxContainer"]
margin_left = 321.0
margin_top = 480.0
margin_right = 732.0
margin_bottom = 536.0
size_flags_horizontal = 3
text = "PASS"
align = 1

[node name="AwayPass" type="Label" parent="VBoxContainer"]
margin_left = 736.0
margin_top = 480.0
margin_right = 1053.0
margin_bottom = 536.0
size_flags_horizontal = 3
text = "0"
align = 2

[node name="HomePassSuccess" type="Label" parent="VBoxContainer"]
margin_top = 540.0
margin_right = 317.0
margin_bottom = 596.0
size_flags_horizontal = 3
text = "100 - 90%"

[node name="PassSuccess" type="Label" parent="VBoxContainer"]
margin_left = 321.0
margin_top = 540.0
margin_right = 732.0
margin_bottom = 596.0
size_flags_horizontal = 3
text = "PASS_SUCCESS"
align = 1

[node name="AwayPassSuccess" type="Label" parent="VBoxContainer"]
margin_left = 736.0
margin_top = 540.0
margin_right = 1053.0
margin_bottom = 596.0
size_flags_horizontal = 3
text = "60% - 26"
align = 2

[node name="HomeYellowCards" type="Label" parent="VBoxContainer"]
margin_top = 600.0
margin_right = 317.0
margin_bottom = 656.0
size_flags_horizontal = 3
text = "0"

[node name="YellowCards" type="Label" parent="VBoxContainer"]
margin_left = 321.0
margin_top = 600.0
margin_right = 732.0
margin_bottom = 656.0
size_flags_horizontal = 3
text = "YELLOW_CARDS"
align = 1

[node name="AwayYellowCards" type="Label" parent="VBoxContainer"]
margin_left = 736.0
margin_top = 600.0
margin_right = 1053.0
margin_bottom = 656.0
size_flags_horizontal = 3
text = "0"
align = 2

[node name="HomeRedCards" type="Label" parent="VBoxContainer"]
margin_top = 660.0
margin_right = 317.0
margin_bottom = 716.0
size_flags_horizontal = 3
text = "0"

[node name="RedCards" type="Label" parent="VBoxContainer"]
margin_left = 321.0
margin_top = 660.0
margin_right = 732.0
margin_bottom = 716.0
size_flags_horizontal = 3
text = "RED_CARDS"
align = 1

[node name="AwayRedCards" type="Label" parent="VBoxContainer"]
margin_left = 736.0
margin_top = 660.0
margin_right = 1053.0
margin_bottom = 716.0
size_flags_horizontal = 3
text = "0"
align = 2
